5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1575_2896.log
== TEST (2019-03-13 13:41:43) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("PYTHON")

# Impressao de saidas
print(Digite o nome:)
-- ERROR:
File "XXXX", line 7
    print(Digite o nome:)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:41:59) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("PYTHON")

# Impressao de saidas
print(var)(Digite o nome:)
-- ERROR:
File "XXXX", line 7
    print(var)(Digite o nome:)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:42:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("PYTHON")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:42:46) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("PYTHON")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.15303
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
